--- a/charts/mysql/templates/secret.yaml
+++ b/charts/mysql/templates/secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: mysql
 type: Opaque
 data:
-  mysql-root-password: {{ .Values.mysql.rootPassword | b64enc }}
+  mysql-root-password: {{ .Values.mysql.password | b64enc }}
+  mysql-exporter-password: {{ .Values.exporter.exporterPassword | b64enc }}
