--- a/charts/gitlab/templates/configmap.yaml
+++ b/charts/gitlab/templates/configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "gitlab.fullname" . }}-config
+  name: gitlab
 data:
   gitlab.yml: |
     gitlab:
-      host: {{ include "gitlab.fullname" . }}
+      host: gitlab
