--- a/charts/gitlab/templates/service.yaml
+++ b/charts/gitlab/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "gitlab.fullname" . }}
+  name: gitlab
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.port }}
-    targetPort: 80
+    - port: {{ .Values.service.port }}
+      targetPort: 80
   selector:
-    app: {{ include "gitlab.fullname" . }}
+    app: gitlab
