--- a/charts/mariadb/templates/pv.yaml
+++ b/charts/mariadb/templates/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mariadb-pv
+  name: mariadb
 spec:
   capacity:
     storage: 8Gi
@@ -14,8 +14,8 @@ spec:
   nodeAffinity:
     required:
       nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - k8s-main
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - k8s-main
