--- a/charts/mysql/templates/service.yaml
+++ b/charts/mysql/templates/service.yaml
@@ -3,17 +3,11 @@ kind: Service
 metadata:
   name: mysql
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
     - name: mysql
       port: {{ .Values.mysql.port }}
       targetPort: {{ .Values.mysql.port }}
-      nodePort: {{ .Values.service.mysqlNodePort }}
-    {{- if .Values.exporter.enabled }}
-    - name: exporter
-      port: {{ .Values.exporter.port }}
-      targetPort: {{ .Values.exporter.port }}
-      nodePort: {{ .Values.service.exporterNodePort }}
-    {{- end }}
+      nodePort: {{ .Values.mysql.nodePort }}
   selector:
     app: mysql
