--- a/charts/mysql/templates/pv.yaml
+++ b/charts/mysql/templates/pv.yaml
@@ -1,16 +1,16 @@
-{{- if .Values.persistence.enabled }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql
 spec:
   capacity:
-    storage: {{ .Values.persistence.size }}
-  accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
+    storage: 8Gi
+  accessModes:
+    - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ .Values.persistence.storageClass }}
+  storageClassName: local-storage
   local:
-    path: {{ .Values.persistence.localPath }}
+    path: /mnt/disks/mysql
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -18,5 +18,4 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - {{ .Values.persistence.nodeAffinityHostname }}
-{{- end }}
+                - k8s-main
