--- a/charts/mysql/templates/pvc.yaml
+++ b/charts/mysql/templates/pvc.yaml
@@ -1,12 +1,10 @@
-{{- if .Values.persistence.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
-  accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
+  accessModes: {{ .Values.persistence.accessModes }}
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
-{{- end }}
