--- a/charts/mongodb/templates/pvc.yaml
+++ b/charts/mongodb/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-mongodb-pvc
+  name: mongodb
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes: {{ .Values.persistence.accessModes }}
