--- a/charts/kafka/templates/service.yaml
+++ b/charts/kafka/templates/service.yaml
@@ -1,15 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-kafka-headless
+  name: kafka
 spec:
+  type: NodePort
+  ports:
+    - name: broker
+      port: {{ .Values.port.broker }}
+      targetPort: {{ .Values.port.broker }}
+      nodePort: {{ .Values.nodePort }}
+  selector:
+    app: kafka
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-headless
+spec:
+  type: ClusterIP
   clusterIP: None
   ports:
-    - port: 9092
-      name: plaintext
-      targetPort: 9092
-    - port: 9093
-      name: controller
-      targetPort: 9093
+    - name: broker
+      port: {{ .Values.port.broker }}
+      targetPort: {{ .Values.port.broker }}
+    - name: controller
+      port: {{ .Values.port.controller }}
+      targetPort: {{ .Values.port.controller }}
   selector:
-    app: {{ .Release.Name }}-kafka
+    app: kafka
