--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: kafka
+  name: kafka-config
 data:
   clusterId: {{ .Values.clusterId }}
-  server.properties: |
