--- a/charts/kafka/templates/pvc.yaml
+++ b/charts/kafka/templates/pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-{{ .Release.Name }}-kafka
+  name: kafka
 spec:
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: {{ .Values.persistence.storageClass }}
+  accessModes: {{ .Values.persistence.accessModes }}
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
-  storageClassName: {{ .Values.persistence.storageClass }}
