--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -44,17 +44,13 @@ spec:
             - name: KAFKA_CONTROLLER_QUORUM_VOTERS
               value: "0@kafka-0.kafka-headless:{{ .Values.port.controller }},1@kafka-1.kafka-headless:{{ .Values.port.controller }},2@kafka-2.kafka-headless:{{ .Values.port.controller }}"
             - name: KAFKA_LOG_DIRS
-              value: "/bitnami/kafka/data"  # Путь внутри контейнера
-            - name: BITNAMI_DEBUG
-              value: "true"
+              value: "/bitnami/kafka/data"
           command: ["/bin/bash", "-c"]
           args:
             - |
-              # Форматирование storage если нужно (только первый запуск)
               if [ ! -f /bitnami/kafka/data/meta.properties ]; then
-                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties --config /opt/kafka/config/kraft/server.properties
+                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties
               fi
-              # Запуск сервера
               /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
                 --override node.id=$KAFKA_NODE_ID \
@@ -68,26 +64,8 @@ spec:
           volumeMounts:
             - name: kafka
               mountPath: /bitnami/kafka/data
-          livenessProbe:
-            tcpSocket:
-              port: {{ .Values.port.broker }}
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            tcpSocket:
-              port: {{ .Values.port.broker }}
-            initialDelaySeconds: 15
-            periodSeconds: 5
+              subPath: kafka
       volumes:
         - name: kafka
           persistentVolumeClaim:
-            claimName: kafka-data-kafka-$(echo $POD_NAME | sed 's/kafka-//')
-  volumeClaimTemplates:
-    - metadata:
-        name: kafka
-      spec:
-        storageClassName: {{ .Values.persistence.storageClass }}
-        accessModes: {{ .Values.persistence.accessModes }}
-        resources:
-          requests:
-            storage: {{ .Values.persistence.size }}
+            claimName: kafka
